--- a/style.css
+++ b/style.css
@@ -1,119 +1,67 @@
 body {
-    margin: 0;
-    padding: 0
-    font-familly ;
-    background: linear-gradient(150deg, #4bff33, #33FFD4);
-    height: 300vh;
+  background-color: #ccc;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.formulario{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    background: whit-;
-    border-radius: 10px;
+.container {
+  max-width: 500px;
+  margin: 50px auto;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-.formulario h1{
-    text-align: center;
-    padding: 0 0 20px 0;
-    border-bottom: 1px solid silver;
+header {
+  padding: 20px;
+  text-align: center;
+  background-color: #333;
+  color: white;
+  border-radius: 5px 5px 0 0;
 }
 
-.formulario form{
-    padding: 0 40px;
-    box-sizing: border-box;
+.tabs {
+  display: flex;
 }
 
-form .username{
-    position: relative;
-    border-bottom: 2px solid #adadad;
-    margin: 30px 0;
+.tab {
+  flex-grow: 1;
+  text-align: center;
+  padding: 10px 0;
+  background-color: #888;
+  color: white;
+  cursor: pointer;
 }
 
-.username input{
-    width: 100%;
-    padding: 0 5px;
-    height: 40px;
-    font-size: 16 px;
-    border: none;
-    background: none;
-    outline: none;
+.tab:hover {
+  background-color: #666;
 }
 
-.username label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    color:  #adadad;
-    transform: translateY(-50%);
-    font-size: 16px;
-    pointer-events: none;
+.tab.active {
+  background-color: #333;
 }
 
-.username span::before{
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 100%;
-    height: 16px;
-    background: #33FFD4;
-    transition: .5s;
+.content {
+  padding: 20px;
 }
 
-.username input:focus ~ label,
-.username input:focus ~ label{
-    top: -5px;
-    color:#33FFD4;
+.login-form,
+.register-form {
+  display: none;
 }
 
-.username Input:focus ~ span::before,
-.username Input:focus ~ span::before{
-    width:100%;
+.form-group {
+  margin-bottom: 10px;
 }
 
-.recordar{
-    margin: -5px 0 20 px 5px;
-    color: blue;
-    cursor: pointer;
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
-.recordar:hover{
-    text-decoration: underline;
-}
-
-input[type="subit"]{
-    width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: #33FFD4;
-    border-radius: 25px;
-    font-size: 18px;
-    color: white;
-    cursor: pointer;
-    outline: none;
-}
-
-input[type="subit"]:hover{
-    border-color: white;
-    transition: .5s;
-}
-
-.registrarse{
-    margin: 30px 0;
-    text-align: center;
-    font-size: 16px;
-    color: black;
-}
-
-.registrarse a{
-    color: rgb(0, 255, 242);
-    text-decoration: none;
-}
-
-.registrarse a:hover{
-    text-decoration: underline;
+.form-group input {
+  width: 100%;
+  padding: 5px;
 }
