--- a/style.css
+++ b/style.css
@@ -1,67 +1,92 @@
 body {
-  background-color: #ccc;
-  font-family: Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f4;
   margin: 0;
   padding: 0;
 }
 
-.container {
-  max-width: 500px;
-  margin: 100px auto;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-header {
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
-  text-align: center;
   background-color: #333;
-  color: white;
-  border-radius: 5px 5px 0 0;
+  color: #fff;
 }
 
-.tabs {
+nav ul {
+  list-style: none;
   display: flex;
 }
 
-.tab {
-  flex-grow: 1;
-  text-align: center;
-  padding: 10px 0;
-  background-color: #888;
-  color: white;
-  cursor: pointer;
+nav ul li {
+  margin-right: 20px;
 }
 
-.tab:hover {
-  background-color: #666;
-}
-
-.tab.active {
-  background-color: #333;
-}
-
-.content {
-  padding: 20px;
-}
-
-.login-form,
-.register-form {
-  display: none;
-}
-
-.form-group {
-  margin-bottom: 10px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
   font-weight: bold;
+  font-size: 16px;
+  transition: color 0.3s ease;
 }
 
-.form-group input {
+nav ul li a:hover {
+  color: #66a3ff;
+}
+
+.container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+.package {
+  margin-bottom: 30px;
+}
+
+.package h3 {
+  color: #333;
+}
+
+.package p {
+  color: #666;
+}
+
+.package a {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #66a3ff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.package a:hover {
+  background-color: #4d94ff;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  padding: 5px;
 }
