--- a/style1.css
+++ b/style1.css
@@ -1,1 +1,181 @@
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+}
+
+#chatContainer {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  position: relative;
+}
+
+.menu button {
+  margin-top: 10px;
+}
+
+#lockMessage {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  z-index: 1000;
+}
+
+#lockMessage.active {
+  display: block;
+  pointer-events: none;
+}
+
+#lockMessage #lockText {
+  display: none;
+}
+
+#lockMessage.active #lockText {
+  display: block;
+}
+
+.bot-message,
+.user-message {
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+#chatOptions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#userInput {
+  flex: 1;
+  padding: 10px;
+  margin-right: 10px;
+  border: 1px solid #ddd;
+}
+
+#sendMessageButton {
+  background-color: #66a3ff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#sendMessageButton:hover {
+  background-color: #4d94ff;
+}
+
+#lockAnimation {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  background-image: url(lock.png);
+  background-size: cover;
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+#maxQuestionsMessage {
+  display: none;
+  text-align: center;
+  color: red;
+  margin-top: 10px;
+}
+
+#sendButton {
+  border: none;
+  color: gray;
+}
+
+#sendButton:hover {
+  text-decoration: underline;
+}
+
+#usageMessage {
+  font-size: 14px;
+}
+
+#botResponses {
+  margin-bottom: 10px;
+}
+
+#botResponses .bot-message {
+  opacity: 0;
+  animation: fadeInUp 0.5s forwards;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.menu {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.menu button {
+  margin-top: 10px;
+}
+
+
+#ratingsContainer {
+  text-align: center;
+}
+
+.rating-stars {
+  font-size: 36px;
+  cursor: pointer;
+}
+
+.star::before {
+  content: '\2605'; 
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  color: #ddd;
+  transition: color 0.3s ease-in-out;
+}
+
+.star.filled::before {
+  color: #ffc107; 
+}
+
+#sendRatingButton {
+  font-size: 16px;
+  margin-top: 10px;
+}
+
 
