--- a/style3.css
+++ b/style3.css
@@ -1,54 +1,53 @@
+
+
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f8f8f8;
-    margin: 0;
-    padding: 0;
+    background-color: #f2f2f2;
     color: #333;
+    margin: 0;
 }
 
 header {
-    background-color: #3498db;
+    background-color: #0077cc;
     color: #fff;
     text-align: center;
     padding: 20px 0;
 }
 
-section {
+#consejos {
     max-width: 800px;
-    margin: auto;
+    margin: 20px auto;
 }
 
-ul {
-    list-style-type: none;
+.consejos-list {
+    list-style: none;
     padding: 0;
 }
 
-li {
-    margin-bottom: 10px;
+.consejos-list li {
+    margin-bottom: 20px;
 }
 
 .boton-azul-claro {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 18px;
-    font-weight: bold;
+    display: block;
+    width: 120px;
+    margin: 20px auto;
+    padding: 10px;
     text-align: center;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
     color: #fff;
-    background-color: #3498db;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease;
+    background-color: #0077cc;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 .boton-azul-claro:hover {
-    background-color: #217dbb;
+    background-color: #005580;
 }
 
 footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #3498db;
+    background-color: #333;
     color: #fff;
+    text-align: center;
+    padding: 10px 0;
 }
