--- a/style4.css
+++ b/style4.css
@@ -1,41 +1,103 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url('fondo.jpg'); 
+  background-size: cover;
+  background-position: center;
+}
+
+.container {
+  text-align: center;
+  max-width: 600px; 
+  margin: auto;
+}
+
+.payment-method {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  transition: background-color 0.3s;
+}
+
+.paypal-button,
+.bizum-button,
+.delivery-button {
+  color: #fff;
+  border: none;
+  padding: 15px 30px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+
+
+.paypal-button:hover,
+.bizum-button:hover,
+.delivery-button:hover {
+  background-color: #fff;
+}
+
+.delivery-info {
+  text-align: center;
+  margin-top: 20px;
+  color: #000; 
+}
+
+.email-input {
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  width: 80%;
+  margin: 10px;
+}
+
+.home-button {
+  background-color: #007bff;
+  color: #fff;
+  border: 2px solid #007bff;
+  border-radius: 15px;
+  padding: 10px 20px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.home-button:hover {
+  background-color: #fff;
+  color: #007bff;
+}
+
+.secure-icon {
+  font-size: 50px;
+  color: #4CAF50; 
+  animation: pulse 1.5s infinite; 
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
   }
-  
-  .payment-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
+  50% {
+    transform: scale(1.2);
   }
-  
-  .payment-method {
-    text-align: center;
+  100% {
+    transform: scale(1);
   }
-  
-  .paypal-button,
-  .bizum-button,
-  .delivery-button {
-    display: inline-block;
-    padding: 15px 30px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    border: none;
-    border-radius: 50px;
-    color: #fff;
-    background-color: #66a3ff;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease;
-    cursor: pointer;
+}
+
+  #animated-text {
+    font-size: 18px;
+    color: #4CAF50;
+    animation: fadeIn 1s forwards;
   }
-  
-  .paypal-button:hover,
-  .bizum-button:hover,
-  .delivery-button:hover {
-    background-color: #4d94ff;
-  }
-  
+
+
