--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
-
-
-
 
 :root{
     --first-color: #12192C;
     --text-color: #8590AD;
+    --body-font: 'Roboto', sans-serif;
+    --big-font-size: 2rem;
+    --normal-font-size: 0.938rem;
+    --smaller-font-size: 0.875rem;
 }
 
 
@@ -244,12 +244,34 @@ img{
         margin: 0 auto;
     }
 
+   .form__register-mode {
+    display: none;
+    transform: translateY(0);
+}
+
+.form__register-mode .form__content {
+    transform: translateY(0);
+}
+
+@media screen and (max-width: 767px) {
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .form__content {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
     .form__register-mode {
-        transform: translateY(1); 
+        transform: translateY(0);
     }
 
     .form__register-mode .form__content {
-        transform: translateY(1); 
+        transform: translateY(0);
     }
 }
-
