--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ footer {
   height: 60px; 
 }
 
+
 .image-section {
   margin-top: 30px;
 }
@@ -123,6 +124,7 @@ footer {
   color: #fff;
 }
 
+
 .logo-container {
   position: absolute;
   top: 100px; 
@@ -140,6 +142,9 @@ footer {
 .logo-container:hover {
   transform: scale(1.2);
 }
+
+
+
 
 .cookie-banner {
   display: none;
@@ -173,9 +178,40 @@ footer {
 }
 
 
+.product {
+  margin-bottom: 30px;
+  text-align: center;
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.product img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+
+.product-title {
+  font-size: 1.5em;
+  margin-top: 10px;
+  color: #000;
+  transition: color 0.3s ease;
+}
+
+.product:hover {
+  transform: scale(1.05); 
+  filter: brightness(80%);
+}
+
+.product:hover .product-title {
+  color: #fff;
+}
+
+
+
 .form__button {
-    background-color: #000; 
-    color: #fff;
+    background-color: #4CAF50; 
+    color: white;
     border: none;
     padding: 10px 20px;
     text-align: center;
@@ -189,10 +225,12 @@ footer {
 }
 
 .form__button:hover {
-    background-color: #fff;
-    color: #000;
-    border: 2px solid #000;
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
 }
+
+
 
 .form__div-input-email {
     display: flex;
@@ -210,9 +248,10 @@ footer {
     flex: 1;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     border-radius: 5px;
 }
+
 
 @keyframes flip {
     from {
