--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ footer {
   background-color: #4d94ff;
 }
 
-
+/* Agregar los estilos para el formulario */
 .form__button {
     background-color: #000; 
     color: #fff;
