--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #333;
-  color: #fff;
+  background-color: #fff;
+  color: #333;
 }
 
 nav ul {
@@ -285,4 +285,3 @@ footer {
 .form__icon-password i {
   font-size: 20px;
 }
-
